--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -1,80 +1,71 @@
-
-
-.main-screen{
+.main-screen {
   background: url(/src/assets/view/main-backgraund.jpg);
-background-size: cover;
-background-repeat: no-repeat;
-background-position: center;
-color: #fff;
-
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  color: #fff;
+  max-height: 1024px;
+  height: 100%;
+ 
 }
-.main-header{
+.main-header {
   display: flex;
   justify-content: flex-end;
   width: 100%;
 }
-.settings-icon{
-  background: url(/src/assets/view/settings.svg);
-  background-size: cover;
-  margin: 10px;
+.main-main {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  height: 80%;
 }
-.artist-btn,
-.pictures-btn{
-  background: transparent;
-  border: 1px #fff solid;
-  border-radius: 10px;
-  line-height: 20px;
-  color: #fff;
+
+.artist-btn{
+  margin-right: 20px;
 }
 .logo {
-  background-image: url(/src/assets/view/artquizlogowhite.svg);
+  background: url(/src/assets/view/artquizlogowhite.svg);
   background-size: cover;
   margin: 0 auto;
+  max-width: 440px;
+  width: 100%;
+  max-height: 165px;
+  height: 100%;
+  margin-bottom: 10%;
 }
-.developer-github {
-  
-  font-size: 30px;
-  color: #fff;
-}
-.main-footer{
-  display: flex;
-  align-items: flex-end;
+.default-settings-button,
+    .save-settings-button {
+      width: 268px;
+      height: 62px;
+    }
 
-justify-content: space-between;
-width: 100%;
-}
-.logo-footer-rss {
-  background-image: url(/src/assets/view/rss-logo.png);
-  background-size: cover;
-  width: 63px;
-  height: 23px;
-}
 @media screen and (max-width: 360px) {
-  .settings-icon {
-    width: 20px;
-    height: 20px;
+  .main-screen {
+    font-size: 14px;
   }
-  .main-main{
-    margin-top: 107%;
+  .main-main {
+    margin-top: 60%;
     margin-bottom: 25px;
   }
-  .logo{
-    
-    height: 62px;
-    width: 166px;
-    
-  }
+  
+}
+@media screen and (max-width: 768px) {
   .kind-of-game-buttons {
     display: flex;
     flex-direction: column;
   }
-  .artist-btn{
+  .artist-btn {
     margin-bottom: 30px;
     margin-top: 30px;
   }
-  .developer-github {
-  
-    font-size: 14px;
-    color: #fff;
+  .logo {
+    height: 120px;
+
+    width: 322px;
+    margin-bottom: 0%;
   }
+}
+@media screen and (max-width: 1024px) {
 }
