--- a/client/src/styles/wrapper.css
+++ b/client/src/styles/wrapper.css
@@ -1,28 +1,43 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
 }
 body {
+  font-family: 'Noto Sans', sans-serif;
   box-sizing: border-box;
   width: 100%;
+  max-height: 1024px;
   height: 100%;
+  font-size: 20px;
+  background-color: rgb(24, 19, 19);
+
 }
-.div {
+/* .div {
   display: none;
+} */
+.back-button,
+a, button{
+  transition:  all .5s linear;
+}
+a {
+  text-decoration: none;
 }
 button {
   border: none;
   text-align: center;
   text-decoration: none;
   display: inline-block;
+  
 }
 .wrapper {
   margin: 0 auto;
   max-width: 1440px;
   width: 100%;
-  height: 100%;
-  overflow: hidden;
+  height: 100vh;
+  
 }
 .main-screen {
   display: flex;
@@ -30,4 +45,81 @@ button {
   justify-content: space-between;
   align-items: center;
   height: 100%;
+}
+.developer-github{
+  text-decoration: none;
+  color: #fff;
+}
+.logo-footer-rss{
+  background: url(../assets/view/rss-logo.png);
+  background-size: cover;
+  width: 85px;
+  height: 31px;
+  display: block;
+}
+.settings-icon {
+  background: url(/src/assets/view/settings.svg);
+  background-size: cover;
+  margin: 10px;
+  width: 30px;
+  height: 30px;
+}
+.logo-footer-rss:hover,
+.developer-github:hover{
+  transform: scale(0.98);
+}
+.settings-icon:hover{
+  transform: scale(1.1);
+  cursor: pointer;
+}
+.artist-btn,
+.pictures-btn,
+.default-settings-button,
+.save-settings-button
+ {
+  background: transparent;
+  border: 2px #fff solid;
+  border-radius: 30px;
+  color: #fff;
+  font-size: 24px;
+  cursor: pointer;
+  
+}
+
+.artist-btn:hover,
+.pictures-btn:hover,
+.default-settings-button:hover,
+.save-settings-button:hover{
+  background: #FFBCA2;
+  color: black;
+}
+.developer-github {
+  font-size: 30px;
+  color: #fff;
+}
+.footer {
+  display: flex;
+  align-items: flex-end;
+
+  justify-content: space-between;
+  width: 100%;
+}
+.logo-footer-rss {
+  width: 85px;
+  height: 31px;
+}
+@media screen and (max-width: 360px) {
+  .logo {
+    height: 62px;
+    width: 166px;
+  }
+
+  .developer-github {
+    color: #fff;
+    font-size: 14px;
+  }
+  .logo-footer-rss {
+    width: 63px;
+    height: 23px;
+  }
 }
