feat: add styles for categories

--- a/client/src/styles/categories.css
+++ b/client/src/styles/categories.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100%;
+  min-height: 100vh;
 }
 .footer {
   max-width: 95%;
@@ -18,6 +18,10 @@
 .categories-main {
   width: 90%;
   margin: 0 auto;
+}
+.categories-main {
+  display: flex;
+  flex-direction: column;
 }
 
 .categories-header {
@@ -56,51 +60,147 @@
 }
 
 .categories-wrapper {
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 1299px;
-    width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 1299px;
+  width: 100%;
+  font-size: 20px;
+}
+.categories-title {
+  display: none;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 28px;
+  letter-spacing: -0.5px;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
+.heading {
+  margin-bottom: 10px;
+}
+.card {
+  margin: 12px;
+}
+.card:nth-child(7),
+.card:first-child {
+  margin-left: 0px;
+}
+.card:nth-child(6),
+.card:last-child {
+  margin-right: 0px;
+}
+
+.image-categories {
+  height: 206px;
+  width: 195px;
+  border-radius: 25px;
+  background-size: cover;
+  margin-top: 10px;
+}
+
+.portrait .image-categories {
+  background: url(../assets/view/port.jpg);
+  
+}
+.landscape .image-categories {
+  background: url(../assets/view/land.jpg);
+}
+.still-life .image-categories {
+  background: url(../assets/view/stilllife.jpg);
+}
+.impressionism .image-categories {
+  background: url(../assets/view/impres.jpg);
+}
+.expressionism .image-categories {
+  background: url(../assets/view/expres.jpg);
+}
+.avant-garde .image-categories {
+  background: url(../assets/view/avantgard.jpg);
+}
+.renaissance .image-categories {
+  background: url(../assets/view/renaiss.jpg);
+}
+.surrealism .image-categories {
+  background: url(../assets/view/surr.jpg);
+}
+.kitsch .image-categories {
+  background: url(../assets/view/kitsch.jpg);
+}
+.minimalism .image-categories {
+  background: url(../assets/view/minimal.jpg);
+}
+.interior .image-categories {
+  background: url(../assets/view/interior.jpg);
+}
+.nude .image-categories {
+  background: url(../assets/view/nude.jpg);
+}
+.image-categories{
+  transition: all 0.5s ease;
+  cursor: pointer;
+}
+.image-categories:hover{
+  filter: saturate(3);
+}
+.image-saturate {
+  filter: saturate(0.1);
+}
+
+@media screen and (max-width: 768px) {
+  .categories-title {
+    display: block;
+  }
+  .score {
+    display: block;
+  }
+  .header-left {
+    max-width: 550px;
+  }
+  .card:nth-child(4),
+  .card:nth-child(7),
+  .card:nth-child(10) {
+    margin-left: 0px;
+  }
+}
 @media screen and (max-width: 360px) {
   .footer {
     visibility: hidden;
   }
-  .header-navigation{
-      position: absolute;
-      bottom: 0;
-      left: 0px;
-      display: flex;
-      align-items: center;
-      max-width: 360px;
-      width: 100%;
-      height: 75px;
-      margin: 0 auto;
-      border-top: 2px solid #fff;
-      border-radius: 20px;
+  .header-navigation {
+    position: fixed;
+    background: #000;
+    bottom: 0;
+    left: 0px;
+    display: flex;
+    align-items: center;
+    max-width: 360px;
+    width: 100%;
+    height: 75px;
+    margin: 0 auto;
+    border-top: 2px solid #fff;
+    border-radius: 20px;
   }
   .home:hover,
   .categories:hover,
-  .score:hover{
+  .score:hover {
     filter: invert(82%) sepia(13%) saturate(1842%) hue-rotate(312deg)
-    brightness(107%) contrast(101%);
+      brightness(107%) contrast(101%);
     cursor: pointer;
   }
-  .home{
-      background: url(../assets/view/home.svg);
-      width: 31px;
-      margin-left: 50px;
-      
+  .home {
+    background: url(../assets/view/home.svg);
+    width: 31px;
+    margin-left: 50px;
   }
   .categories {
-      background: url(../assets/view/categies.svg);
-      width: 58px;
-      
+    background: url(../assets/view/categies.svg);
+    width: 58px;
   }
-  .score{
-      background: url(../assets/view/score.svg);
-      width:30px;
-      margin-right: 50px;
+  .score {
+    background: url(../assets/view/score.svg);
+    width: 30px;
+    margin-right: 50px;
   }
   .home,
   .categories,
@@ -108,71 +208,19 @@
     font-size: 0;
     height: 48px;
   }
-
-}
-@media screen and (max-width: 768px) {
-  .score {
-    display: block;
-  }
-  .header-left {
-    max-width: 550px;
-  }
-  
-  
-}
-.card{
-    margin: 12px;
-}
-.card:nth-child(7),
-.card:first-child{
-    margin-left: 0px;
-}
-.card:nth-child(6),
-.card:last-child{
-    margin-right: 0px;
-}
-.image-categories{
-    height: 206px;
-    width: 195px;
-    
-    border-radius: 25px;
-    background-size: cover;
+  .card {
+    margin: 0px;
     margin-top: 10px;
-}
+  }
 
-.portrait .image-categories{
-    background: url(../assets/view/port.jpg);
-}
-.landscape .image-categories{
-    background: url(../assets/view/land.jpg);
-}
-.still-life .image-categories{
-    background: url(../assets/view/stilllife.jpg);
-}
-.impressionism .image-categories{
-    background: url(../assets/view/impres.jpg);
-}
-.expressionism .image-categories{
-    background: url(../assets/view/expres.jpg);
-}
-.avant-garde .image-categories{
-    background: url(../assets/view/avantgard.jpg);
-}
-.renaissance .image-categories{
-    background: url(../assets/view/renaiss.jpg);
-}
-.surrealism .image-categories{
-    background: url(../assets/view/surr.jpg);
-}
-.kitsch .image-categories{
-    background: url(../assets/view/kitsch.jpg);
-}
-.minimalism .image-categories{
-    background: url(../assets/view/minimal.jpg);
-}
-.interior .image-categories{
-    background: url(../assets/view/interior.jpg);
-}
-.nude .image-categories{
-    background: url(../assets/view/nude.jpg);
+  .image-categories {
+    max-height: 164px;
+    max-width: 155px;
+  }
+  .card:nth-child(odd) {
+    margin-right: 7px;
+  }
+  .card:nth-child(even) {
+    margin-left: 7px;
+  }
 }
