--- a/client/src/styles/categories.css
+++ b/client/src/styles/categories.css
@@ -14,6 +14,7 @@
   margin: 0 auto;
 }
 
+
 .categories-header,
 .categories-main {
   width: 90%;
@@ -97,10 +98,14 @@
   border-radius: 25px;
   background-size: cover;
   margin-top: 10px;
+  position: relative;
+  z-index: 0;
+  
 }
 
 .portrait .image-categories {
   background: url(../assets/view/port.jpg);
+  
   
 }
 .landscape .image-categories {
@@ -143,8 +148,8 @@
 .image-categories:hover{
   filter: saturate(3);
 }
-.image-saturate {
-  filter: saturate(0.1);
+.image-saturate-non {
+  filter: saturate(1);
 }
 
 @media screen and (max-width: 768px) {
@@ -169,6 +174,7 @@
   }
   .header-navigation {
     position: fixed;
+    z-index: 10;
     background: #000;
     bottom: 0;
     left: 0px;
