--- a/client/src/styles/categories.css
+++ b/client/src/styles/categories.css
@@ -1,19 +1,20 @@
 .wrapper {
   color: #fff;
   background-color: black;
+ 
 }
 .categories-screen {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-height: 100vh;
+ 
+  
 }
 .footer {
   max-width: 95%;
   margin: 0 auto;
 }
-
 
 .categories-header,
 .categories-main {
@@ -99,14 +100,11 @@
   background-size: cover;
   margin-top: 10px;
   position: relative;
-  z-index: 0;
-  
+  z-index: 1;
 }
 
 .portrait .image-categories {
   background: url(../assets/view/port.jpg);
-  
-  
 }
 .landscape .image-categories {
   background: url(../assets/view/land.jpg);
@@ -141,11 +139,11 @@
 .nude .image-categories {
   background: url(../assets/view/nude.jpg);
 }
-.image-categories{
+.image-categories {
   transition: all 0.5s ease;
   cursor: pointer;
 }
-.image-categories:hover{
+.image-categories:hover {
   filter: saturate(3);
 }
 .image-saturate-non {
@@ -167,25 +165,30 @@
   .card:nth-child(10) {
     margin-left: 0px;
   }
+  /* .categories-screen{
+    min-height: 1024px;
+  } */
 }
 @media screen and (max-width: 360px) {
-  .footer {
+  /* .footer {
     visibility: hidden;
-  }
+  } */
   .header-navigation {
-    position: fixed;
+    position: fixed!important;;
+    bottom: 0px;
+    right: 0px;
     z-index: 10;
     background: #000;
-    bottom: 0;
-    left: 0px;
+    
     display: flex;
     align-items: center;
     max-width: 360px;
-    width: 100%;
+    width:100%;
     height: 75px;
     margin: 0 auto;
     border-top: 2px solid #fff;
     border-radius: 20px;
+    
   }
   .home:hover,
   .categories:hover,
@@ -229,4 +232,8 @@
   .card:nth-child(even) {
     margin-left: 7px;
   }
+  .categories-wrapper{
+    margin-bottom: 50px;
+  }
+  
 }
