--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -4,9 +4,8 @@
   background-repeat: no-repeat;
   background-position: center;
   color: #fff;
-  max-height: 1024px;
-  height: 100%;
- 
+  
+  width: 100%;
 }
 .main-header {
   display: flex;
@@ -22,8 +21,14 @@
   height: 80%;
 }
 
-.artist-btn{
+.artist-btn {
   margin-right: 20px;
+}
+.artist-btn,
+.pictures-btn{
+  max-width: 287px;
+  width: 100%;
+  height: 62px;
 }
 .logo {
   background: url(/src/assets/view/artquizlogowhite.svg);
@@ -36,21 +41,17 @@
   margin-bottom: 10%;
 }
 .default-settings-button,
-    .save-settings-button {
-      width: 268px;
-      height: 62px;
-    }
-
-@media screen and (max-width: 360px) {
-  .main-screen {
-    font-size: 14px;
-  }
-  .main-main {
-    margin-top: 60%;
-    margin-bottom: 25px;
-  }
-  
+.save-settings-button {
+  width: 268px;
+  height: 62px;
 }
+.kind-of-game-buttons{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
 @media screen and (max-width: 768px) {
   .kind-of-game-buttons {
     display: flex;
@@ -59,6 +60,7 @@
   .artist-btn {
     margin-bottom: 30px;
     margin-top: 30px;
+    margin-right: 0px;
   }
   .logo {
     height: 120px;
@@ -66,5 +68,26 @@
     width: 322px;
     margin-bottom: 0%;
   }
+  
 }
 
+@media screen and (max-width: 360px) {
+  .main-screen {
+    font-size: 14px;
+  }
+  .main-main {
+    justify-content: space-around;
+    margin: 0 auto;
+    height: 60%;
+  }
+  .artist-btn {
+    margin: 0 auto;
+    margin-bottom: 30px;
+  }
+  .artist-btn,
+.pictures-btn{
+  max-width: 268px;
+  width: 100%;
+  height: 56px;
+}
+}
