--- a/client/src/styles/questions.css
+++ b/client/src/styles/questions.css
@@ -1,4 +1,3 @@
-
 .wrapper {
   color: #fff;
   background-color: black;
@@ -7,8 +6,15 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-height: 100vh;
+  
+  width: 100%;
 }
+.close-question-button
+{background: url(../assets/view/close-settings.svg);
+background-repeat: no-repeat;
+width: 18px;
+height: 18px;
+padding: 5px;}
 
 .questions-header {
   display: flex;
@@ -37,54 +43,61 @@
   max-width: 825px;
   width: 100%;
   margin: 0 auto;
+  
 }
 
-
-  .slide-circle {
-    width: 15px;
-    height: 15px;
-    background: #fff;
-    display: block;
-    border-radius: 50%;
-    transition: all 0.5s ease;
-    cursor: pointer;
-  }
-  .slide-circle:hover {
-    background: #ffbca2;
-  }
-  .slide-circle.active-slide {
-    background: #ffbca2;
-  }
+.slide-circle {
+  width: 15px;
+  height: 15px;
+  background: #fff;
+  display: block;
+  border-radius: 50%;
+  transition: all 0.5s ease;
+  cursor: pointer;
+}
+.slide-circle:hover {
+  background: #ffbca2;
+}
+.slide-circle.active-slide {
+  background: #ffbca2;
+}
+.question-main-wrapper{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+.artist-main {
+  width: 100%;
+}
 @media screen and (max-width: 768px) {
-    .questions-wrapper{
-        max-width: 671px;
-    }
-    .footer{
-        max-width: 720px;
-        margin: 0 auto;
-    }
-    .progress-questions{
-        max-width:579px;
-    }
-    .answer-slider {
-      width: 100%;
-      
-    }
+  .questions-wrapper {
+    max-width: 671px;
+  }
+  .footer {
+    max-width: 720px;
+    margin: 0 auto;
+  }
+  .progress-questions {
+    max-width: 579px;
+  }
+  .answer-slider {
+    width: 100%;
+  }
 }
 @media screen and (max-width: 360px) {
-    .questions-wrapper,
-    .footer{
-        max-width: 328px;
-    }
-    .progress-questions{
-        max-width:266px;
-    }
-    .footer{
-        font-size: 14px;
-    }
-    .slider{
-        position: relative;
-        top: 10px;
-
-    }
+  .questions-wrapper,
+  .footer {
+    max-width: 328px;
+  }
+  .progress-questions {
+    max-width: 266px;
+  }
+  .footer {
+    font-size: 14px;
+  }
+  .slider {
+    position: relative;
+    top: 10px;
+  }
 }
