--- a/client/src/styles/settings.css
+++ b/client/src/styles/settings.css
@@ -6,11 +6,14 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  width: 90%;
- margin: 0 auto;
-  max-height: 1024px;
-  height: 100%;
+  width: 100%;
+  margin: 0 auto;
   color: #fff;
+  
+}
+.setting-wrapper{
+  width: 90%;
+  height: 100%;
 }
 .settings-header {
   margin-top: 20px;
@@ -18,6 +21,7 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
+  
 }
 .back-button {
   margin-left: 5px;
@@ -33,7 +37,7 @@
 .back-button:hover {
   filter: invert(82%) sepia(13%) saturate(1842%) hue-rotate(312deg)
     brightness(107%) contrast(101%);
-    cursor: pointer;
+  cursor: pointer;
 }
 .back-icon {
   background-image: url(../assets/view/back-settings.svg);
@@ -44,35 +48,41 @@
 .settings-main {
   font-size: 30px;
   width: 100%;
+  height: 90%;
+  display: flex;
+  margin: 0 auto;
+}
+.settings-block {
   height: 80%;
   display: flex;
-  
-}
-.settings-block{
-    height: 80%;
-    display: flex;
-    flex-direction: column;
-   max-width: 492px;
-   width: 100%;
-   margin: 0 auto;
-    justify-content: space-between;
+  flex-direction: column;
+  max-width: 492px;
+  width: 100%;
+  margin: 0 auto;
+  justify-content: space-around;
 }
 .volume-range {
-    width: 100%;
-    height: 2px;
-    -webkit-appearance: none;
-    background: linear-gradient(to right, #710707 0%, #710707 20%, #C4C4C4 20%, #C4C4C4 100%);
-    transition: background 450ms ease-in;
-    outline: none;
+  width: 100%;
+  height: 2px;
+  -webkit-appearance: none;
+  background: linear-gradient(
+    to right,
+    #710707 0%,
+    #710707 20%,
+    #c4c4c4 20%,
+    #c4c4c4 100%
+  );
+  transition: background 450ms ease-in;
+  outline: none;
 }
 .volume-range::-webkit-slider-thumb {
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    -webkit-appearance: none;
-    cursor: pointer;
-    background: #FFFFFF;
-  }
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  -webkit-appearance: none;
+  cursor: pointer;
+  background: #ffffff;
+}
 .settings-accept-block {
   display: flex;
   align-items: flex-end;
@@ -81,13 +91,13 @@
   font-weight: 700;
 }
 .default-settings-button,
-  .save-settings-button{
-    width: 287px;
-    height: 62px;
-  }
-  .default-settings-button {
-    margin-right: 10px;
-  }
+.save-settings-button {
+  width: 287px;
+  height: 62px;
+}
+.default-settings-button {
+  margin-right: 10px;
+}
 .settings-footer {
   display: flex;
   justify-content: space-between;
@@ -95,7 +105,7 @@
   align-items: flex-end;
 }
 
-.volume-icons{
+.volume-icons {
   display: flex;
   justify-content: space-between;
   height: 30px;
@@ -104,22 +114,19 @@
 .minus-button,
 .plus-button,
 .mute,
-.volume-up{
+.volume-up {
   width: 36px;
   height: 36px;
-  transition:  all .5s linear;
+  transition: all 0.5s linear;
 }
 .mute {
   background: url(../assets/view/volume-mute-settings.svg);
-  
-
 }
-.volume-up{
+.volume-up {
   background: url(../assets/view/volume-up-settings.svg);
-  
 }
 .count-regulator,
-.switch-wrapper{
+.switch-wrapper {
   display: flex;
   align-items: center;
   max-width: 150px;
@@ -127,7 +134,6 @@
   justify-content: space-between;
   margin-top: 20px;
 }
-
 
 /* The switch - the box around the slider */
 .switch {
@@ -138,10 +144,12 @@
 }
 
 /* Hide default HTML checkbox */
-.switch input {display:none;}
+.switch input {
+  display: none;
+}
 
 /* The slider */
-.slider {
+.switch .slider {
   position: absolute;
   cursor: pointer;
   top: 0;
@@ -149,11 +157,11 @@
   right: 0;
   bottom: 0;
   background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
-.slider:before {
+.switch .slider:before {
   position: absolute;
   content: "";
   height: 26px;
@@ -161,16 +169,16 @@
   left: 4px;
   bottom: 4px;
   background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 .timegame-switch:checked + .slider {
-  background-color: #FFBCA2;
+  background-color: #ffbca2;
 }
 
 .timegame-switch:focus + .slider {
-  box-shadow: 0 0 1px #FFBCA2;
+  box-shadow: 0 0 1px #ffbca2;
 }
 
 .timegame-switch:checked + .slider:before {
@@ -192,8 +200,7 @@
   flex-direction: column;
 }
 .minus-button,
-.plus-button
-{
+.plus-button {
   background: #fff;
   border-radius: 50%;
   color: #000;
@@ -206,13 +213,13 @@
 }
 .minus-button.active,
 .plus-button.active {
-  background: #FFBCA2;
+  background: #ffbca2;
 }
 @media screen and (max-width: 360px) {
   .settings-screen {
     font-size: 14px;
     text-align: center;
-    max-width: 320px;
+    
     margin: 0 auto;
   }
   .default-settings-button,
@@ -220,33 +227,35 @@
     max-width: 156px;
     height: 56px;
   }
-  .settings-block{
+  .settings-block {
     align-items: center;
   }
   .back-button {
     width: 50%;
   }
-  .settings-main{
+  .settings-main {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    
   }
-  .volume-block{
+  .volume-block {
     max-width: 298px;
-      width:100%
+    width: 100%;
   }
   .volume-icons,
-  .volume-range{
+  .volume-range {
     width: 100%;
   }
   .time-answer-block {
     align-items: center;
   }
-  .close-button{
+  .close-button {
     display: none;
   }
-  
+  .setting-wrapper{
+    width: 100%;
+    height: 100%;
+  }
 }
 @media screen and (max-width: 768px) {
   .settings-main {
